--- a/web_site/journal_layout.css
+++ b/web_site/journal_layout.css
@@ -1,23 +1,23 @@
 /*annoying yellow, 7 example*/
 #annoying:hover{
-	color: yellow;
+	color: lightgreen;
 }
-
 .header{
 	background-color: #A8F0F0;
 	text-align: end;
+	box-shadow: 0px 0px 10px 3px #00000069;	
 }
 .header .header_topic{
 	font-size: 14pt;
 }
 .links{
 	position: fixed;
-	border: 4px solid rgb(0,144,151);
+	border: 4px solid rgb(0,145,150);
 	float: left;
 	margin-top: 7px;
 	width: 12.5%;
 	padding-left: 0.25%;
-	box-shadow: 2px 2px 10px 2px gray;
+	box-shadow: inset -2px -2px 10px grey;
 	background-color: #A8F0F0;
 }
 .links h1{
@@ -25,12 +25,16 @@
 	font-family: sans-serif;
 	font-style: oblique;
 }
+h1, h2{
+text-shadow: 3px 3px 5px lightblue;
+}
 .containers{
 	margin-left: 20%;
 	background-color: #E8FBFB;
 	border: 4px solid #C2E9E9;
 	margin-top: 10px;
 	padding: 5px;
+	box-shadow: 2px 2px 10px 2px #00000059;	
 	min-height: 210px;
 }
 *:link	{
@@ -47,8 +51,8 @@
 	border: 10px solid white;
 	margin: 0 10%;
 	background-color: white;
-	box-shadow: 2px 2px 14px 7px gray;
+	box-shadow: 0px 0px 12px 3px gray;
 }
 body{
-	background-image: url(images/background.png);
+	background-image: url(images/pattern.jpg);
 }
